AArch64: Fails to build after 8167372

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P1
    • 10
    • Affects Version/s: 10
    • Component/s: hotspot
    • b38
    • aarch64
    • linux
    • Verified

        Aarch64 builds are failing, with the following backtrace:

        JDK-8167372 added a assertion that is tripping in the compiler:

        Stack: [0x0000010003580000,0x0000010003780000], sp=0x000001000377cab0, free space=2034k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x11b624c] VMError::report_and_die(int, char const*, char const*, std::__va_list, Thread*, unsigned char*, void*, void*, char const*, int, unsigned long)+0x658
        V [libjvm.so+0x11b5b04] VMError::report_and_die(Thread*, char const*, int, char const*, char const*, std::__va_list)+0x84
        V [libjvm.so+0x822c88] report_vm_error(char const*, int, char const*, char const*, ...)+0x110
        V [libjvm.so+0x62f448] oopDesc* JNIHandles::resolve_impl<false>(_jobject*)+0xbc
        V [libjvm.so+0x63ab24] JNIHandles::resolve(_jobject*)+0x34
        V [libjvm.so+0xdb4f14] MacroAssembler::movoop(RegisterImpl*, _jobject*, bool)+0x88
        V [libjvm.so+0x54b120] LIR_Assembler::jobject2reg(_jobject*, RegisterImpl*)+0x70
        V [libjvm.so+0x54c364] LIR_Assembler::const2reg(LIR_OprDesc*, LIR_OprDesc*, LIR_PatchCode, CodeEmitInfo*)+0x2f4
        V [libjvm.so+0x5481a4] LIR_Assembler::move_op(LIR_OprDesc*, LIR_OprDesc*, BasicType, LIR_PatchCode, CodeEmitInfo*, bool, bool, bool)+0x2e8
        V [libjvm.so+0x547248] LIR_Assembler::emit_op1(LIR_Op1*)+0x1bc
        V [libjvm.so+0x539780] LIR_Op1::emit_code(LIR_Assembler*)+0x2c
        V [libjvm.so+0x546468] LIR_Assembler::emit_lir_list(LIR_List*)+0x17c
        V [libjvm.so+0x5462c4] LIR_Assembler::emit_block(BlockBegin*)+0x1a8
        V [libjvm.so+0x5460a8] LIR_Assembler::emit_code(BlockList*)+0x68
        V [libjvm.so+0x4e8524] Compilation::emit_code_body()+0x150
        V [libjvm.so+0x4e8844] Compilation::compile_java_method()+0x240
        V [libjvm.so+0x4e8bac] Compilation::compile_method()+0xe4
        V [libjvm.so+0x4e9334] Compilation::Compilation(AbstractCompiler*, ciEnv*, ciMethod*, int, BufferBlob*, DirectiveSet*)+0x24c
        V [libjvm.so+0x4ef4c4] Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0xec
        V [libjvm.so+0x7a98e0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x6d0
        V [libjvm.so+0x7a8754] CompileBroker::compiler_thread_loop()+0x274
        V [libjvm.so+0x1117dec] compiler_thread_entry(JavaThread*, Thread*)+0x94
        V [libjvm.so+0x1111fa8] JavaThread::thread_main_inner()+0x184
        V [libjvm.so+0x1111dfc] JavaThread::run()+0x18c
        V [libjvm.so+0xeffa38] thread_native_entry(Thread*)+0x18c
        C [libpthread.so.0+0x7c50] start_thread+0xb0
        C [libc.so.6+0xdac60] thread_start+0x30

        This causes debug builds to fail (fastdebug and slowdebug).

          1. hs_err_pid18177.log
            27 kB
            Stuart Monteith
          2. hs_err_pid31444.log
            35 kB
            Stuart Monteith
          3. 8193699-02.patch
            2 kB
            Rahul Raghavan

              Assignee:
              Rahul Raghavan
              Reporter:
              Stuart Monteith
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: