8193699: aarch64 fails to build after 8167372

Added ThreadInVMfromUnknown support

Reviewed-by: smonteith, vlivanov